prod/google-cloud/4-traefik/old-yamls/test-whoami-ingress-route-tls.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-kirbyware-io-tls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`test.kirbyware.io`)
    kind: Rule
    services:
    - name: whoamiv1
      port: 80
